:sparkles: Add Socket.io server and integrate with Next.js app
- Introduced a new Socket.io server for real-time game interactions.
- Created environment configuration for database and Socket.io.
- Updated package.json to include necessary dependencies for Socket.io and Express.
- Added API routes for game and player management using Prisma.
- Implemented game state management and player actions through Socket.io.
- Added components for socket status and game socket handling in the frontend.
- Created setup documentation for project configuration and deployment.

--- a/package.json
+++ b/package.json
@@ -4,32 +4,44 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:server": "tsx server/index.ts",
+    "dev:all": "concurrently \"pnpm dev\" \"pnpm dev:server\"",
     "build": "next build",
+    "build:server": "tsc -p server/tsconfig.json",
     "start": "next start",
+    "start:server": "node dist/index.js",
     "lint": "next lint"
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
-    "@supabase/supabase-js": "^2.53.0",
     "@tanstack/react-query": "^5.84.1",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
     "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
+    "concurrently": "^9.2.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
     "tailwindcss": "^4",
+    "tsx": "^4.20.3",
     "typescript": "^5",
     "uuid": "^11.1.0"
   }
