--- a/package.json
+++ b/package.json
@@ -4,23 +4,22 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "dev:server": "tsx server/index.ts",
-    "dev:all": "concurrently \"pnpm dev\" \"pnpm dev:server\"",
     "build": "next build",
-    "build:server": "tsc -p server/tsconfig.json",
     "start": "next start",
-    "start:server": "node dist/index.js",
     "lint": "next lint"
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "@supabase/supabase-js": "^2.53.0",
     "@tanstack/react-query": "^5.84.1",
+    "@types/pg": "^8.15.5",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
+    "pg": "^8.16.3",
     "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
