Features/supabase realtime (#8)
* 🔧 Refactor game socket handling to use Supabase Realtime

- Replaced Socket.io integration with Supabase Realtime for real-time game interactions.
- Updated GameSocketHandler component to utilize new event listeners for game state updates and player actions.
- Removed deprecated API calls and streamlined event handling for improved performance and maintainability.
- Updated game store to leverage new Supabase API functions for game creation and joining, enhancing code organization.

* ✨ Add example environment configuration for Supabase

- Created a new env.example file to provide a template for Supabase configuration.
- Included necessary environment variables for Supabase URL, anon key, and PostgreSQL direct connection for development and testing.
- This addition aids in setting up the project environment for new developers and contributors.

* 🔧 Update Next.js and ESLint configuration to version 15.3.4

- Downgraded Next.js and eslint-config-next from version 15.4.5 to 15.3.4 for compatibility reasons.
- Updated related dependencies in package.json and pnpm-lock.yaml to reflect the new versions.
- Ensured consistency across the project by aligning all references to the downgraded versions.

--- a/env.example
+++ b/env.example
@@ -1,6 +1,13 @@
-# Database URL (Supabase PostgreSQL)
-POSTGRES_URL_NON_POOLING="postgresql://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-REF].supabase.co:5432/postgres"
+# Supabase Configuration
+NEXT_PUBLIC_SUPABASE_URL=https://esovptjomkkd.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
 
-# Socket.io Configuration
-NEXT_PUBLIC_SOCKET_URL="http://localhost:3001"
-SOCKET_PORT="3001" 
+# Server-side Supabase (pour les API routes)
+GLOU_GAROU_SUPABASE_URL=https://esovptjomkkd.supabase.co
+GLOU_GAROU_SUPABASE_ANON_KEY=your_anon_key_here
+
+# PostgreSQL Direct Connection (optionnel, pour les tests)
+GLOU_GAROU_POSTGRES_URL_NON_POOLING=postgresql://postgres.esovptjomkkd:your_password@aws-0-eu-west-2.pooler.supabase.com:6543/postgres?pgbouncer=true
+
+# Environment
+NODE_ENV=development
